--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -2,10 +2,10 @@
 <html>
   <head>
     <title>Andy's Clock</title>
-    <link rel="stylesheet" type="text/css" href="/css/site.css"/>
+    <link rel="stylesheet" type="text/css" href="site.css"/>
   </head>
   <body>
     <div id="app"></div>
-    <script src="/main.js"></script>
+    <script src="main.js"></script>
   </body>
 </html>
